Make solr-enabled linker work with locations and subjects (temporarily disable 'browse' on for these instances -- until inline paginated searching is ready to go)

--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -140,3 +140,19 @@
     Mixed Content Enabled&#160;&#160;--&#160;&#160;Type '<' for elements or highlight text to wrap
   </div>
 --></div>
+
+
+<div id="linker_subject_template"><!--
+  <span>
+    {for t in terms}
+      ${t.term}
+      {if t_index < terms.length - 1} -- {/if}
+    {/for}
+  </span>
+--></div>
+
+<div id="linker_location_template"><!--
+  <span>
+    ${building}{if defined("floor")}, ${floor}{/if}{if defined("room")}, ${room}{/if}{if defined("area")}, ${area}{/if}
+  </span>
+--></div>
