--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -225,7 +225,7 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   .digital_object_component .icon-token {background-position: -456px -24px;}
   .accession .icon-token {background-position: -168px -24px;}
   .subject .icon-token {display: none;}
-  .location .icon-token {display: none;}
+  .location .icon-token {background-position: -24px -72px;}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
