--- a/frontend/app/views/locations/_linker.html.erb
+++ b/frontend/app/views/locations/_linker.html.erb
@@ -13,21 +13,20 @@
    <div class="controls">
        <div class="input-append linker-wrapper">
           <input type="text" class="linker" 
-            data-object_class="location"
-            data-controller="locations"
             data-label="Location"
             data-label_plural="Locations"
             data-name="location"
             data-path="<%= form.path %>"
-            data-url="<%= url_for :controller => :locations, :action => :list, :format => :json %>"
+            data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
             data-selected='<%= selected_json %>'
             data-multiplicity="one"
-            data-format_property="display_string"
+            data-format_template_id="linker_location_template"
+            data-types='["location"]'
           />
           <div class="btn-group">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li>
+                <!-- <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li> -->
                 <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :locations, :action => :new, :inline => true %>" class="linker-create-btn">Create</a></li>
               </ul>
           </div>
