--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -11,14 +11,14 @@
             data-name="subjects"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
             data-selected='<%= form.obj['subjects'].blank? ? "[]" : form.obj['resolved']['subjects'].collect {|s| Subject.from_hash(s)}.to_json %>'
-            data-format_property="display_string"
+            data-format_template_id="linker_subject_template"
             data-sortable="true"
             data-types='["subject"]'
           />
           <div class="btn-group">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
-                 <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li>
+                 <!-- <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li> -->
                  <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :subjects, :action => :new, :inline => true %>" class="linker-create-btn">Create</a></li>
               </ul>
           </div>
