--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -100,7 +100,7 @@
    {/if}
 --></div>
 <div id="linker_selectedtoken_template"><!--
-   <li id="${item.id.replace(/\//g,'_')}" class="${item.json.type}">
+   <li id="${item.id.replace(/\//g,'_')}" class="${item.json.jsonmodel_type}">
       <span class="icon-token"></span>
       <input type="hidden" name="${config.path}[resolved][${config.name}]{if config.multiplicity != 'one'}[]{/if}" />
       <input type="hidden" name="${config.path}[${config.name}]{if config.multiplicity != 'one'}[]{/if}" value="${item.id}" />
