--- a/frontend/app/views/collection_management_records/_record_linker.html.erb
+++ b/frontend/app/views/collection_management_records/_record_linker.html.erb
@@ -13,16 +13,15 @@
     <div class="linker-wrapper">
       <input type="text" class="linker"
              id="<%= form.id_for("ref") %>"
-             data-object_class="<%= form.obj["jsonmodel_type"] %>"
-             data-controller="collection_management_records"
              data-label="Records"
              data-label_plural="Records"
              data-name="ref"
              data-path="<%= form.path %>"
-             data-url="<%= url_for :controller => :collection_management_records, :action => :listrecords, :format => :json %>"
+             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
              data-selected='<%= selected_json %>'
              data-multiplicity="one"
              data-format_template="title"
+             data-types='["accession", "resource", "digital_object"]'
       />
     </div>
   </div>
