--- a/frontend/app/views/events/_form.html.erb
+++ b/frontend/app/views/events/_form.html.erb
@@ -1,13 +1,17 @@
 <%= render :partial => "shared/form_messages", :locals => {:object => @event, :form => form} %>
 
-<section id="basic_information">
-  <h3>Basic Information</h3>
-  <fieldset>
-    <%= form.label_and_select "event_type", form.jsonmodel_options_for(:event, "event_type") %>
-    <%= form.label_and_textfield "outcome" %>
-    <%= form.label_and_textarea "outcome_note" %>
-  </fieldset>
-</section>
+<% define_template("event", jsonmodel_definition(:event)) do |form| %>
+  <section id="basic_information">
+    <h3>Basic Information</h3>
+    <fieldset>
+      <%= form.label_and_select "event_type", form.possible_options_for("event_type") %>
+      <%= form.label_and_textfield "outcome" %>
+      <%= form.label_and_textarea "outcome_note" %>
+    </fieldset>
+  </section>
+<% end %>
+
+<% form.emit_template("event") %>
 
 <section id="event_date">
   <h3>Event date</h3>
