--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -5,17 +5,22 @@
 <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
 <fieldset>
-  <section id="basic_information">
-    <h3>Basic Information</h3>
-    <%= form.label_and_textfield "title" %>
-    <%= form.label_and_textfield "digital_object_id" %>
-    <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:digital_object, "publish")["default"] %>
-    <%= form.label_and_select "level", form.jsonmodel_options_for(:digital_object, "level") %>
-    <%= form.label_and_select "digital_object_type", form.jsonmodel_options_for(:digital_object, "digital_object_type") %>
-    <%= form.label_and_select "language", form.jsonmodel_options_for(:digital_object, "language", true) %>
-    <%= form.label_and_boolean "restrictions", {}, form.jsonmodel_schema_definition(:digital_object, "restrictions")["default"] %>
-    <%= render :partial => "subjects/linker", :locals => { :form => form }%>
-  </section>
+
+  <% define_template "digital_object", jsonmodel_definition(:digital_object) do |form| %>
+    <section id="basic_information">
+      <h3>Basic Information</h3>
+      <%= form.label_and_textfield "title" %>
+      <%= form.label_and_textfield "digital_object_id" %>
+      <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
+      <%= form.label_and_select "level", form.possible_options_for("level") %>
+      <%= form.label_and_select "digital_object_type", form.possible_options_for("digital_object_type") %>
+      <%= form.label_and_select "language", form.possible_options_for("language", true) %>
+      <%= form.label_and_boolean "restrictions", {}, form.default_for("restrictions") %>
+      <%= render :partial => "subjects/linker", :locals => { :form => form }%>
+    </section>
+  <% end %>
+
+  <% form.emit_template("digital_object") %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "digital_object_linked_agent"} %>
 
