--- a/frontend/app/views/extents/_template.html.erb
+++ b/frontend/app/views/extents/_template.html.erb
@@ -1,8 +1,8 @@
-<% define_template "extent" do |form| %>
+<% define_template "extent", jsonmodel_definition(:extent) do |form| %>
   <div class="subrecord-form-fields">
-    <%= form.label_and_select("portion", form.jsonmodel_options_for(:extent, "portion")) %>
+    <%= form.label_and_select("portion", form.possible_options_for("portion")) %>
     <%= form.label_and_textfield("number") %>
-    <%= form.label_and_select("extent_type", form.jsonmodel_options_for(:extent, "extent_type")) %>
+    <%= form.label_and_select("extent_type", form.possible_options_for("extent_type")) %>
     <hr/>
     <%= form.label_and_textfield("container_summary") %>
     <%= form.label_and_textfield("physical_details") %>
