--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -11,7 +11,7 @@
    end
 %>
 
-<% define_template "note_singlepart" do |form| %>
+<% define_template "note_singlepart", jsonmodel_definition(:note_singlepart) do |form| %>
   <div class="subrecord-form-fields" data-type="note_singlepart">
     <h4 class="subrecord-form-heading">
       <% if form.readonly? %>
@@ -30,7 +30,7 @@
   </div>
 <% end %>
 
-<% define_template "note_orderedlist" do |form| %>
+<% define_template "note_orderedlist", jsonmodel_definition(:note_orderedlist) do |form| %>
   <div class="subrecord-form-fields" data-type="note_orderedlist">
     <h4 class="subrecord-form-heading">Ordered List</h4>
     <div class="subrecord-form-container">
@@ -65,7 +65,7 @@
    end
 %>
 
-<% define_template "note_multipart" do |form| %>
+<% define_template "note_multipart", jsonmodel_definition(:note_multipart) do |form| %>
   <div class="subrecord-form-fields" data-type="note_multipart">
     <h4 class="subrecord-form-heading">
       <% if form.readonly? %>
@@ -112,7 +112,7 @@
   </div>
 <% end %>
 
-<% define_template "note_definedlist" do |form| %>
+<% define_template "note_definedlist", jsonmodel_definition(:note_definedlist) do |form| %>
   <div class="subrecord-form-fields" data-type="note_definedlist">
     <h4 class="subrecord-form-heading">Defined List</h4>
     <div class="subrecord-form-container">
@@ -143,7 +143,7 @@
   </div>
 <% end %>
 
-<% define_template "note_index" do |form| %>
+<% define_template "note_index", jsonmodel_definition(:note_index) do |form| %>
   <div class="subrecord-form-fields" data-type="note_index">
     <h4 class="subrecord-form-heading">Index</h4>
     <div class="subrecord-form-container">
@@ -177,7 +177,7 @@
   </div>
 <% end %>
 
-<% define_template "note_chronology" do |form| %>
+<% define_template "note_chronology", jsonmodel_definition(:note_chronology) do |form| %>
   <div class="subrecord-form-fields" data-type="note_chronology">
     <h4 class="subrecord-form-heading">Chronology</h4>
     <div class="subrecord-form-container">
@@ -226,7 +226,7 @@
   <div class="subrecord-form-inline"><%= form.textfield(nil, item) %></div>
 <% end %>
 
-<% define_template "note_bibliography" do |form| %>
+<% define_template "note_bibliography", jsonmodel_definition(:note_bibliography) do |form| %>
   <div class="subrecord-form-fields" data-type="note_bibliography">
     <h4 class="subrecord-form-heading">Bibliography</h4>
     <div class="subrecord-form-container">
@@ -258,7 +258,7 @@
    end
 %>
 
-<% define_template "note_digital_object" do |form| %>
+<% define_template "note_digital_object", jsonmodel_definition(:note_digital_object) do |form| %>
   <div class="subrecord-form-fields" data-type="note_digital_object">
     <h4 class="subrecord-form-heading">
       <% if form.readonly? %>
