--- a/frontend/app/views/rights_statements/_template.html.erb
+++ b/frontend/app/views/rights_statements/_template.html.erb
@@ -1,14 +1,14 @@
-<% define_template "rights_statement" do |form| %>
+<% define_template "rights_statement", jsonmodel_definition(:rights_statement) do |form| %>
   <div class="subrecord-form-fields">
     <% if form.obj["identifier"].blank? %>
       <%= form.label_and_readonly "identifier", "<em>-- auto-generated upon save --</em>" %>
     <% else %>
       <%= form.label_with_field "identifier", "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["identifier"]}</span></span>".html_safe %>
     <% end %>
-    <%= form.label_and_select "rights_type", form.jsonmodel_options_for(:rights_statement, "rights_type") %>
-    <%= form.label_and_boolean "active", {}, form.jsonmodel_schema_definition(:rights_statement, "active")["default"] %>
+    <%= form.label_and_select "rights_type", form.possible_options_for("rights_type") %>
+    <%= form.label_and_boolean "active", {}, form.default_for("active") %>
     <%= form.label_and_textfield "materials" %>
-    <%= form.label_and_select "ip_status", form.jsonmodel_options_for(:rights_statement, "ip_status") %>
+    <%= form.label_and_select "ip_status", form.possible_options_for("ip_status") %>
     <%= form.label_and_date "ip_expiration_date" %>
     <%= form.label_and_textfield "license_identifier_terms" %>
     <%= form.label_and_textfield "statute_citation" %>
