--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -33,6 +33,10 @@
       <% if @digital_object_component.linked_agents.length > 0 %>
         <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object_component.linked_agents, :section_id => "digital_object_component_linked_agents_" } %>
       <% end %>
+      
+      <% if @digital_object_component.notes.length > 0 %>
+        <%= render :partial => "notes/show", :locals => { :notes => @digital_object_component.notes, :context => readonly } %>
+      <% end %>
 
       <% if @digital_object_component.extents.length > 0 %>
         <%= render :partial => "extents/show", :locals => { :extents => @digital_object_component.extents, :section_id => "digital_object_component_extents_" } %>
