--- a/frontend/app/views/digital_object_components/_sidebar.html.erb
+++ b/frontend/app/views/digital_object_components/_sidebar.html.erb
@@ -5,6 +5,10 @@
     <% if controller.action_name != "show" || @digital_object_component.linked_agents.length > 0 %>
       <li><a href="#digital_object_component_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
     <% end %>
+    
+    <% if not controller.action_name === "show" or @digital_object_component.notes.length > 0 %>
+      <li><a href="#notes">Notes <span class="icon-chevron-right"></span></a></li>
+    <% end %>
 
     <% if controller.action_name != "show" || @digital_object_component.extents.length > 0 %>
       <li><a href="#digital_object_component_extents_">Extents <span class="icon-chevron-right"></span></a></li>
