--- a/frontend/app/views/external_documents/_show.html.erb
+++ b/frontend/app/views/external_documents/_show.html.erb
@@ -2,27 +2,19 @@
    section_id = "external_documents" if section_id.blank?
 %>
 
-<section id="<%= section_id %>">
+<section id="<%= section_id %>" class="subrecord-form-dummy">
   <h3>External Documents</h3>
 
-  <% external_documents.each_with_index do | document, index | %>
-    <div class="external-document">
-      <div class="row-fluid label-and-value">
-         <div class="span3"><%= I18n.t("external_document.title") %></div>
-         <div class="span9"><%= document["title"] %></div>
+  <div class="subrecord-form-container">
+    <% external_documents.each_with_index do | document, index | %>
+      <%= readonly_context :external_document, document do |readonly| %>
+      <div class="subrecord-form-fields external-document">
+        <%= readonly.label_and_textfield "title" %>
+        <%= readonly.label_with_field "location", ((document["location"] =~ URI::regexp).nil?) ? document["location"] : link_to(document["location"], document["location"]) %>
+        <%= readonly.label_and_boolean "publish" %>
       </div>
-      <div class="row-fluid label-and-value">
-        <div class="span3"><%= I18n.t("external_document.location") %></div>
-        <div class="span9">
-          <% if (document["location"] =~ URI::regexp).nil? %>
-            <%= document["location"] %>
-          <% else %>
-            <a href="<%= document["location"] %>"><%= document["location"] %></a>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <% if index < external_documents.length-1 %><hr/><% end %>
-  <% end %>
+      <% end %>
+    <% end %>
+  </div>
 
 </section>
