--- a/frontend/app/views/external_documents/_template.html.erb
+++ b/frontend/app/views/external_documents/_template.html.erb
@@ -2,5 +2,6 @@
   <div class="subrecord-form-fields">
     <%= form.label_and_textarea "title" %>
     <%= form.label_and_textfield "location" %>
+    <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
   </div>
 <% end %>
