--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -32,5 +32,6 @@
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
 
 </fieldset>
