--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -50,6 +50,10 @@
         <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object_component.external_documents, :section_id => "digital_object_component_external_documents_" } %>
       <% end %>
 
+      <% if @digital_object_component.rights_statements.length > 0 %>
+        <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object_component.rights_statements, :section_id => "digital_object_component_rights_statements_"  } %>
+      <% end %>
+
     <% end %>
 
   </div>
