--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -47,6 +47,10 @@
       <% if @digital_object.external_documents.length > 0 %>
         <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object.external_documents, :section_id => "digital_object_external_documents_"  } %>
       <% end %>
+
+      <% if @digital_object.rights_statements.length > 0 %>
+        <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object.rights_statements, :section_id => "digital_object_rights_statements_"  } %>
+      <% end %>
     <% end %>
   </div>
 </div>
