--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -22,6 +22,10 @@
       <li><a href="#digital_object_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if not controller.action_name === "show" or @digital_object.rights_statements.length > 0 %>
+      <li><a href="#digital_object_rights_statements_">Rights Statements <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary">Save Resource</button>
