--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -7,6 +7,7 @@
 //= require deaccessions.crud
 //= require subrecord.crud
 //= require archival_object.crud
+//= require rights_statements.crud
 
 $(function() {
   $.fn.init_resource_form = function() {
