--- a/frontend/app/views/rights_statements/_template.html.erb
+++ b/frontend/app/views/rights_statements/_template.html.erb
@@ -1,3 +1,66 @@
+<% define_template "rights_type_intellectual_property", jsonmodel_definition(:rights_statement) do |form| %>
+  <div class="inline-subform rights-type-subform" data-rights-type="intellectual_property">
+    <%= form.label_and_textfield "materials" %>
+    <%= form.label_and_select "ip_status", form.possible_options_for("ip_status") %>
+    <%= form.label_and_date "ip_expiration_date" %>
+    <%= form.label_and_textfield "jurisdiction", {"required" => true} %>
+    <%= form.label_and_textfield "type_note" %>
+    <%= form.label_and_textfield "permissions" %>
+    <%= form.label_and_textfield "restrictions" %>
+    <%= form.label_and_date "restriction_start_date" %>
+    <%= form.label_and_date "restriction_end_date" %>
+    <%= form.label_and_textfield "granted_note" %>
+  </div>
+<% end %>
+
+<% define_template "rights_type_license", jsonmodel_definition(:rights_statement) do |form| %>
+  <div class="inline-subform rights-type-subform" data-rights-type="license">
+    <%= form.label_and_textfield "materials" %>
+    <%= form.label_and_textfield "license_identifier_terms", {"required" => true} %>
+    <%= form.label_and_textfield "type_note" %>
+    <%= form.label_and_textfield "permissions" %>
+    <%= form.label_and_textfield "restrictions" %>
+    <%= form.label_and_date "restriction_start_date" %>
+    <%= form.label_and_date "restriction_end_date" %>
+    <%= form.label_and_textfield "granted_note" %>
+  </div>
+<% end %>
+
+<% define_template "rights_type_statute", jsonmodel_definition(:rights_statement) do |form| %>
+  <div class="inline-subform rights-type-subform" data-rights-type="statute">
+    <%= form.label_and_textfield "materials" %>
+    <%= form.label_and_textfield "statute_citation", {"required" => true} %>
+    <%= form.label_and_textfield "jurisdiction", {"required" => true} %>
+    <%= form.label_and_textfield "type_note" %>
+    <%= form.label_and_textfield "permissions" %>
+    <%= form.label_and_textfield "restrictions" %>
+    <%= form.label_and_date "restriction_start_date" %>
+    <%= form.label_and_date "restriction_end_date" %>
+    <%= form.label_and_textfield "granted_note" %>
+  </div>
+<% end %>
+
+<% define_template "rights_type_institutional_policy", jsonmodel_definition(:rights_statement) do |form| %>
+  <div class="inline-subform rights-type-subform" data-rights-type="institutional_policy">
+    <%= form.label_and_textfield "materials" %>
+    <%= form.label_and_textfield "type_note" %>
+    <%= form.label_and_textfield "permissions" %>
+    <%= form.label_and_textfield "restrictions" %>
+    <%= form.label_and_date "restriction_start_date" %>
+    <%= form.label_and_date "restriction_end_date" %>
+    <%= form.label_and_textfield "granted_note" %>
+  </div>
+<% end %>
+
+<% define_template "rights_type_nil", jsonmodel_definition(:rights_statement) do %>
+  <div class="inline-subform rights-type-subform">
+    <div class="control-group">
+      <div class="control-label"></div>
+      <div class="controls"><em>Please select a Rights Type</em></div>
+    </div>
+  </div>
+<% end %>
+
 <% define_template "rights_statement", jsonmodel_definition(:rights_statement) do |form| %>
   <div class="subrecord-form-fields">
     <% if form.obj["identifier"].blank? %>
@@ -5,20 +68,16 @@
     <% else %>
       <%= form.label_with_field "identifier", "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["identifier"]}</span></span>".html_safe %>
     <% end %>
-    <%= form.label_and_select "rights_type", form.possible_options_for("rights_type") %>
+
     <%= form.label_and_boolean "active", {}, form.default_for("active") %>
-    <%= form.label_and_textfield "materials" %>
-    <%= form.label_and_select "ip_status", form.possible_options_for("ip_status") %>
-    <%= form.label_and_date "ip_expiration_date" %>
-    <%= form.label_and_textfield "license_identifier_terms" %>
-    <%= form.label_and_textfield "statute_citation" %>
-    <%= form.label_and_textfield "jurisdiction" %>
-    <%= form.label_and_textfield "type_note" %>
-    <%= form.label_and_textfield "permissions" %>
-    <%= form.label_and_textfield "restrictions" %>
-    <%= form.label_and_date "restriction_start_date" %>
-    <%= form.label_and_date "restriction_end_date" %>
-    <%= form.label_and_textfield "granted_note" %>
+
+    <%= form.label_and_select "rights_type", form.possible_options_for("rights_type", true) %>
+
+    <% if form.obj["rights_type"].blank? %>
+      <% form.emit_template("rights_type_nil") %>
+    <% else %>
+      <% form.emit_template("rights_type_#{form.obj["rights_type"]}", form.obj) %>
+    <% end %>
 
     <div class="subrecord-form-container">
       <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
