add a non-required ref_id to the subject model

--- a/frontend/app/views/subjects/_sidebar.html.erb
+++ b/frontend/app/views/subjects/_sidebar.html.erb
@@ -1,5 +1,6 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
+    <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
     <li><a href="#terms">Terms <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" or @subject.external_documents.length > 0 %>
