--- a/frontend/app/views/subjects/_form.html.erb
+++ b/frontend/app/views/subjects/_form.html.erb
@@ -29,6 +29,11 @@
 <fieldset>
    <%= form.hidden_input "vocabulary", current_vocabulary['uri'] %>
 
+   <section id="identifier">
+     <h3>Identifier</h3>
+     <%= form.label_and_textfield "ref_id" %>
+   </section>
+
    <section id="terms">
      <h3>Terms</h3>
      <div class="row-fluid">
