Tweak the subject sidebar to link up to the sections of the form/readonly views

--- a/frontend/app/views/subjects/_form.html.erb
+++ b/frontend/app/views/subjects/_form.html.erb
@@ -29,8 +29,8 @@
 <fieldset>
    <%= form.hidden_input "vocabulary", current_vocabulary['uri'] %>
 
-   <section id="identifier">
-     <h3>Identifier</h3>
+   <section id="basic_information">
+     <h3>Basic Information</h3>
      <%= form.label_and_textfield "ref_id" %>
    </section>
 
