--- a/frontend/app/views/subjects/_sidebar.html.erb
+++ b/frontend/app/views/subjects/_sidebar.html.erb
@@ -4,7 +4,7 @@
     <li><a href="#terms">Terms <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" or @subject.external_documents.length > 0 %>
-      <li><a href="#external_documents">External Documents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#subject_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" %>
